--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+//    id 'com.google.gms.google-services'
 }
 
 android {
@@ -29,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -40,4 +46,65 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
+
+    implementation 'androidx.core:core-ktx:1.8.0'
+
+    // Google Map
+//    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+//    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    // OkHttp3
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    // Retrodit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // koin DI
+    implementation "org.koin:koin-android:2.2.2"
+    implementation "org.koin:koin-android-scope:2.2.2"
+    implementation "org.koin:koin-android-viewmodel:2.2.2"
+    implementation "org.koin:koin-android-ext:2.2.2"
+
+    // Room library
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
+    // AndroidX
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+
+    // Firebase
+//    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.google.firebase:firebase-auth:21.0.5'
+//    implementation 'com.google.firebase:firebase-firestore-ktx'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.9'
+//    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    // CameraX
+    // CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha02"
+    // CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:1.2.0-alpha02"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.2.0-alpha02"
+
+    // Circle Indicator
+    implementation 'me.relex:circleindicator:2.1.6'
+
+    // Unit Test
+    testImplementation "org.koin:koin-test:2.1.5"
+    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation "android.arch.core:core-testing:1.1.1"
 }
