--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
 
     // Google Map
-//    implementation 'com.google.android.gms:play-services-maps:18.0.2'
-//    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
 
     // OkHttp3
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
