22/06/28 식당 리스트 정렬 + 식당 상세 화면 + 식당 전화 기능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".view.mylocation.MyLocationActivity"
             android:exported="false" />
+        <activity
+            android:name=".view.main.home.restaurant.detail.RestaurantDetailActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
