--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -15,6 +19,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodDeliveryApp"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".view.review.camera.preview.ImagePreviewListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.review.camera.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.review.gallery.GalleryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.review.AddRestaurantReviewActivity"
+            android:exported="false" />
         <activity
             android:name=".view.main.MainActivity"
             android:exported="true">
@@ -30,7 +46,6 @@
         <activity
             android:name=".view.main.home.restaurant.detail.RestaurantDetailActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.order.OrderMenuListActivity"
             android:exported="false" />
